--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -77,6 +77,11 @@ footer {
 	height: 140px;
 	border-left: 3px solid #a9d85f;
 }
+.displayPosts2 {
+	background-color: #ffffff;
+	height: 140px;
+	border-left: 3px solid #ff7eb5;
+}
 section {
 	background-color: #cecece;
 	
